--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 }
 html{
     font-size: 62.5%;
-    overflow: hidden;
+    overflow-x: hidden;
 
 }
 body{
@@ -77,16 +77,16 @@ section{
     max-width: 60rem;
 }
 .home-content h1{
-    font-size: 5.6rem;
+    font-size: 4rem;
     font-weight: 600;
-    line-height: 1.3;
+    line-height: 1.2;
 }
 .home-content .animation{
     position: relative;
     width: 32.8rem;
 }
 .home-content .animation h3{
-    font-size: 3.2rem;
+    font-size: 2rem;
     font-weight: 700;
     color: transparent;
     -webkit-text-stroke: .7px var(--main-color);
@@ -230,13 +230,16 @@ span{
     display: inline-block;
     width: 15rem;
 }
-.btn-box.btns a::before{
+.btn-box .btns:hover{
+    color: var(--main-color);
+}
+.btn-box.btns a:hover::after{
+    background: var(--bg-color);
+}
+.btn-box.btns a:hover::before{
     background: var(--second-bg-color);
 }
-.btn-box.btns a::before{
-    background: var(--second-bg-color);
-}
-.education{
+.employment{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -244,18 +247,114 @@ span{
     min-height: auto;
     padding-bottom: 5rem;
 }
+.employmentrow .btn-box{
+    margin: 2rem;
+    align-items: center;
+    position: relative;
+    justify-content: center;
+}
 
-.education .educationrow{
-    display: flex;
+.employment .employmentrow{
+   
     flex-wrap: wrap;
     gap: 5rem;
 
 }
-.education .educationcolumn{
+.employment .employmentcolumn{
     flex: 1 1 40rem;
 
 }
-.educationcolumn.title{
+.employmentcolumn .title{
     font-size: 2.5rem;
     margin: 0 0 1.5rem 2rem ;
+}
+.employmentcolumn .employmentbox{
+    border-left: .2rem solid var(--main-color);
+}
+.employmentbox .employmentcontent{
+    position: relative;
+    padding-left: 2rem;
+}
+.employmentbox .employmentcontent::before {
+    content: '';
+    position: absolute;
+    left: -1.1rem;
+    top: 0;
+    width: 2rem;
+    height: 2rem;
+    background: var(--main-color);
+    border-radius: 50%;
+
+}
+
+.employmentcontent .content{
+    position: relative;
+    padding: 1.5rem;
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    margin-bottom: 5px;
+    overflow: hidden;
+}
+.employmentcontent .content::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: var(--second-bg-color);
+    z-index: -1;
+    transition: .7s;
+}
+
+.employmentcontent .content:hover::before{
+    width: 100%;
+}
+.employmentcontent .content .year{
+    font-size: 1.5rem;
+    color: var(--main-color);
+    padding-bottom: .5rem;
+}
+.employmentcontent .content .year i{
+    padding-right: .5rem;
+}
+.employmentcontent .content h3{
+    font-size: 1.6rem;
+}
+.employmentcontent .content p{
+    font-size: 1.3rem;
+    padding-top: .5rem;
+
+}
+
+.skills{
+    width: 100%;
+    min-height: auto;
+    padding-bottom: .7rem;
+    background: var(--second-bg-color);
+    text-align: center;
+
+}
+.skills .skillsrow{
+    
+    flex-wrap: wrap;
+    gap: 5rem;
+}
+.skillsrow .skillscolumn{
+    flex: 1 1 40rem;
+
+}
+.skillscolumn .title{
+    font-size: 2.5rem;
+    margin: 0 0 1.5rem;
+}
+.skillsbox .skillscontent{
+    position: relative;
+    border: .2rem solid var(--main-color);
+    border-radius: .6rem;
+    padding: .5rem 1.5rem;
+    
+}
+.skillscontent .progeress{
+    padding: 1.4rem;
 }
